--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "countdown-clock",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@sagar.pawar/countdown-clock",
+  "version": "1.0.0",
+  "private": false,
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
