--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
   "name": "@sagar.pawar/countdown-clock",
   "version": "1.0.0",
   "private": false,
+  "description": "Display a Countdown timer by Providing Date and Time ",
+  "licence":"MIT",
+  "repository": "sagar097/countdown-clock",
+  "keywords":[
+    "countdown",
+    "npm",
+    "package",
+    "sagar.pawar",
+    "countdown-timer",
+    "clock",
+    "timer"
+  ],
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
