--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@sagar.pawar/countdown-clock",
-  "version": "1.0.0",
+  "name": "countdown-now",
+  "version": "4.0.0",
   "private": false,
   "description": "Display a Countdown timer by Providing Date and Time ",
-  "licence":"MIT",
+  "licence": "MIT",
   "repository": "sagar097/countdown-clock",
-  "keywords":[
+  "keywords": [
     "countdown",
     "npm",
     "package",
@@ -15,6 +15,8 @@
     "timer"
   ],
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@sagar.pawar/countdown-clock": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
